Fix displaying of loader on mobiles.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,8 @@ body {
   align-items: center;
   flex-direction: column;
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: 2;
   background-color: $blue;
   animation: loader 4s linear;
